[package]
name = "discord_badge_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
web3 = "0.19.0"
poise = "0.6.1"
rustc-hex = "2.1.0"